# urisys-node

./: CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  planfile.yaml  project.sh  pyproject.toml
config/: node-profile.full-trust.json  node-profile.json  node-profile.lenovo.json  node.env.example  nodes.registry.json  route-map.lenovo.yaml  route-map.master.yaml  route-map.slave.yaml
data/: events.jsonl  workers.json
docker/: Dockerfile.gui  README.md  docker-compose.gui.yml  entrypoint.sh
docs/: ARCHITECTURE.md  PAIRING.md  SCREEN_BACKENDS.md
flows/: bootstrap-kvm-github.uri.flow.yaml  bootstrap-kvm-pypi.uri.flow.yaml  remote-probe.uri.flow.yaml  screen-capture-mss.uri.flow.yaml  slave-kvm-demo.uri.flow.yaml
markpacts/: uriscreen.contract.markpact.md  urisys-node.capabilities.markpact.md  urisys-node.contract.markpact.md  urisysnode-app.markpact.md  urisysnode-node.markpact.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt  refactoring_plan.md
scripts/: build-wheelhouse.sh  enable-host-trust.sh  install-linux.sh
systemd/: urisys-node-user.service  urisys-node.service
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_app_data.py  test_boot_isolation.py  test_health_profile_visibility.py  test_import_urisysnode.py  test_invalid_profile_tolerated.py  test_node_config_discovery.py  test_pack_resolver_browser.py  test_pack_resolver_kv.py  test_pack_resolver_webrtc.py  test_pack_resolver_wheelhouse.py  test_remote_restart.py  test_supervisor_worker_env.py  test_worker_profile.py  test_worker_router_callback.py
uriscreen/: backends.py  handlers.py  portal_capture.py  routes.py
urishell/: __init__.py  handlers.py  routes.py
urisysnode/: app_data.py  (+21 more)
(+48 files in other folders)
