[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urisys-node"
version = "0.1.16"
description = "urisys-node slave: screen/kvm/him URI server components"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pyyaml>=6.0",
  "urisysedge>=0.1.0",
]

[project.optional-dependencies]
real = ["mss>=9.0", "Pillow>=10.0", "pyautogui>=0.9.54", "pytesseract>=0.3.10", "litellm>=1.40"]
kvm = [
  "urikvm[real]>=0.1.0",
  "urihim[real]>=0.1.0",
  "uriocr[real]>=0.1.0",
  "urillm[vision]>=0.1.0",
]
discovery = ["zeroconf>=0.131.0"]
dev = ["pytest>=8.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.uv.sources]
urisysedge = { path = "../urisysedge", editable = true }
urioperators = { path = "../urioperators", editable = true }
urikvm = { path = "../urikvm", editable = true }
urihim = { path = "../urihim", editable = true }
uriocr = { path = "../uriocr", editable = true }
urillm = { path = "../urillm", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["urisysnode*", "uriscreen*", "urishell*"]

[project.scripts]
urisys-node = "urisysnode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
